Add navigation basic structure in html

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,16 @@
 /* GLOBAL */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 1rem;
   line-height: 1.7;
   font-family: "Muli", sans-serif;
-}
-
-*, *::before, *::after {
-  box-sizing: border-box;
+  margin: 0;
+  background-color: #FFFFFF;
+  font-family: "Muli", sans-serif;
+  color: #0000001e;
 }
 
 /* NAVIGATION */
