--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,98 @@
 /* GLOBAL */
 body {
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.7;
-  font-family: "Muli", sans-serif;
+  font-family: "Palanquin", sans-serif;
+  color: #000000;
+  text-align: center;
   margin: 0;
   background-color: #FFFFFF;
-  font-family: "Muli", sans-serif;
-  color: #0000001e;
 }
 
-/* NAVIGATION */
+h1 {
+  font-family: "Romanesco", cursive;
+  font-size: 32px;
+  color: #f0e00a;
+}
+
+h2, h3 {
+  color: #FFFFFF;
+}
+
+h3, h5 {
+  font-family: "Noto Serif", serif;
+}
+
+h2, h4, p {
+  font-family: "Palanquin", sans-serif;
+}
+
+.section-title h4 {
+  font-weight: 800;
+}
+
+.section-title h5 {
+  font-weight: 100;
+}
+
 /* SPLASH */
+.overlay {
+  /* z-index: 1;
+  height: 100vh;
+  overflow: auto;
+  top: 0px;
+  left: 0px;
+  background: $color-overlay;
+  opacity: 0.2; */
+}
+
+.overlay .splash {
+  position: relative;
+  background-color: #5a5a5a;
+  background-blend-mode: multiply;
+  height: 100vh;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url(/images/background.jpg);
+}
+
+.overlay .splash .container {
+  position: absolute;
+  min-width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.overlay .splash .container .menu ul {
+  list-style-type: none;
+  text-align: left;
+  position: relative;
+  width: 100%;
+}
+
+.overlay .splash .container .menu ul li {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-family: "Palanquin", sans-serif;
+  font-weight: 800;
+  color: #FFFFFF;
+}
+
+.overlay .splash .container .menu ul li a {
+  text-decoration: none;
+  color: #FFFFFF;
+  margin-right: 20px;
+}
+
+.overlay .splash .splash-inner {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+}
+
 /* SERVICES */
 /* PORTFOLIO */
 .card {
@@ -23,9 +105,40 @@ body {
   background-color: #FFFFFF;
   background-clip: border-box;
   border: none;
-  border-radius: 0.25rem;
+  border-radius: 4px;
 }
 
 /* FOOTER */
+footer ul {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+
+footer ul li {
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+  width: 60px;
+  background-color: #000000;
+  border-radius: 50%;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  margin: 48px 15px;
+  transition: all 1s;
+}
+
+footer ul li:hover {
+  transform: scale(1.2);
+}
+
+footer ul li i {
+  color: #FFFFFF;
+  font-size: 28px;
+}
+
 /* MEDIA */
 /*# sourceMappingURL=style.css.map */
