--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-size: 16px;
   line-height: 1.7;
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #000000;
   text-align: center;
   margin: 0;
@@ -18,11 +18,11 @@ h3 {
 }
 
 h3, h5 {
-  font-family: "Noto Serif", serif;
+  font-family: "Libre Baskerville", serif;
 }
 
 h2, h4, p {
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .section-title {
@@ -31,7 +31,7 @@ h2, h4, p {
 
 .section-title h4 {
   font-weight: bold;
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 36px;
   margin-top: 120px;
   margin-bottom: 20px;
@@ -39,7 +39,7 @@ h2, h4, p {
 
 .section-title h5 {
   font-weight: lighter;
-  font-family: "Noto Serif", serif;
+  font-family: "Libre Baskerville", serif;
   margin-bottom: 80px;
 }
 
@@ -53,7 +53,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 80px;
   margin-top: 30px;
   font-weight: bolder;
@@ -62,8 +62,6 @@ h2 {
 
 .splash {
   position: relative;
-  background-color: #5a5a5a;
-  background-blend-mode: multiply;
   height: 100vh;
   background-position: center center;
   background-size: cover;
@@ -89,7 +87,7 @@ h2 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bolder;
   color: #FFFFFF;
 }
@@ -109,7 +107,7 @@ h2 {
 
 .splash .splash-inner .btn {
   color: #FFFFFF;
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-weight: bolder;
   background: #ffee00;
@@ -117,6 +115,17 @@ h2 {
   border-radius: 10px;
   width: 250px;
   height: 70px;
+}
+
+.splash::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  opacity: 0.5;
 }
 
 /* SERVICES */
@@ -131,12 +140,16 @@ h2 {
 }
 
 .services h6 {
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 20px;
 }
 
 /* PORTFOLIO */
+.portfolio {
+  background-color: #f7f7f7;
+}
+
 .portfolio .card {
   position: relative;
   display: -ms-flexbox;
@@ -144,36 +157,33 @@ h2 {
   -ms-flex-direction: column;
       flex-direction: column;
   min-width: 0;
-  background-color: #FFFFFF;
+  background-color: #f7f7f7;
   background-clip: border-box;
-  border: none;
-  border-radius: 4px;
-  /* .card-img {
-      height: 300px;
-      width: 300px;
-      img {
-        width:100%;
-        height:100%;
-        object-fit: cover;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    } */
+  margin: 0 auto;
 }
 
 .portfolio .card .card-text {
-  padding-bottom: 60px;
+  background-color: #FFFFFF;
+}
+
+.portfolio .card .card-img {
+  height: 300px;
+}
+
+.portfolio .card .card-img img {
+  vertical-align: bottom;
+  height: 100%;
+  object-fit: cover;
 }
 
 .portfolio h5 {
   margin-top: 10px;
   font-weight: lighter;
-  font-family: "Noto Serif", serif;
+  font-family: "Libre Baskerville", serif;
 }
 
 .portfolio h6 {
-  font-family: "Palanquin", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 18px;
   margin: 0 auto;
