--- a/css/style.css
+++ b/css/style.css
@@ -181,11 +181,13 @@ h2 {
 
 .portfolio .card {
   background-color: #f7f7f7;
+  width: 291.94px;
+  margin: 0 44px 50px 44px;
 }
 
 .portfolio .card .card-img {
   height: 300px;
-  margin: 0 44px;
+  overflow: hidden;
 }
 
 .portfolio .card .card-img img {
@@ -199,7 +201,7 @@ h2 {
   padding-bottom: 27px;
 }
 
-.portfolio .card h5 {
+.portfolio .card .card-text h5 {
   margin: 2px 0 0 0;
   font-weight: lighter;
   font-family: "Libre Baskerville", serif;
@@ -207,13 +209,12 @@ h2 {
   font-size: 14px;
 }
 
-.portfolio .card h6 {
+.portfolio .card .card-text h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 18px;
   margin: 0;
   color: #333333;
-  font-size: 18px;
 }
 
 .portfolio .col {
