--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,7 +114,7 @@ h2 {
         li {
           text-decoration: none;
           display: inline-block;
-          font-size: 15px;
+          font-size: 14px;
           font-weight:bold;
           font-family: $font-text;
           color: $color-body;
@@ -122,7 +122,7 @@ h2 {
           a {
             text-decoration: none;
             color: $color-body;
-            margin-right: 40px;
+            margin: 0 40px 20px 0;
           }
         }
       }
@@ -197,14 +197,12 @@ h2 {
   background-color: $color-background;
   .card {
     background-color: $color-background;
-    width: 291.94px;
     margin: 0 44px 50px 44px;
     .card-img {
-      height: 300px;
       overflow: hidden;
       img {
       vertical-align: bottom;
-      height: 100%;
+      width: 100%;
       }
     }
     .card-text {
@@ -254,7 +252,8 @@ footer {
       border-radius: 50%;
       justify-content: center;
       align-items: center;
-      margin: 0 15px;
+      margin: 0 10px;
+      line-height: 5px;
       transition: $transition;
       &:hover {
         transform: scale(1.2);
@@ -281,12 +280,4 @@ footer {
     width: auto;
     height: auto;
   }
-  .menu {
-    ul {
-      li {
-        font-size: 12px;
-      }
-    }
-  }
 }
-
